<resources>
    <string name="app_name">MyBaiduMusic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="热门话题">HotSay</string>
    <string name="HotSay">热门话题</string>
    <string name="more">更多</string>
    <string name="banzou">热门伴奏</string>
    <string name="like">我喜欢的单曲</string>
    <string name="songCount">歌曲数量</string>
    <string name="autoDownload">WI-FI自动下载</string>
    <string name="currentTime">当前时间</string>
    <string name="allTime">总时长</string>
    <string name="howManyCount">共有0首歌</string>
    <string name="date">2016.12.16</string>
    <string name="useName">陈国强</string>
    <string name="dy">动态</string>
    <string name="zero">0</string>
    <string name="look">关注</string>
    <string name="two">2</string>
    <string name="fan">粉丝</string>
    <string name="suibian">随便听听</string>
    <string name="localMusic">本地音乐</string>
    <string name="shou">首</string>
    <string name="nearPlay">最近播放</string>
    <string name="all">共</string>
    <string name="shoudouhao">首,</string>
    <string name="likai">首离线可播</string>
    <string name="myDownload">我的下载</string>
    <string name="meself">自建歌单</string>
    <string name="newJian">新建</string>
    <string name="myLikeMusic">我喜欢的音乐</string>
    <string name="allManyMusic">共有0首歌</string>
    <string name="live">直播</string>
    <string name="allList">全部歌单</string>
    <string name="hottest">最热</string>
    <string name="newest">最新</string>
    <string name="gongyou">共有0首歌</string>
    <string name="detail">心中的小情绪被音乐抚摸,让寂寞流淌出你的心房</string>
    <string name="biaoti">华语 流行 寂寞</string>
    <string name="content">让音乐撞见你的心声</string>
    <string name="music">歌曲</string>
    <string name="singer">歌手</string>
    <string name="startLrc">开始搜索歌词</string>
    <string name="k">我的K歌</string>
    <string name="ktv">KTV热歌榜</string>
    <string name="huayujinqu">华语金曲</string>
    <string name="oumeigeshou">欧美歌手</string>
    <string name="men">男歌手</string>
    <string name="women">女歌手</string>
    <string name="bank">乐队组合</string>
    <string name="together">大家都在唱</string>
    <string name="quanbu">全部</string>
    <string name="nvgold">女神</string>
    <string name="goodSong">好声音</string>
    <string name="newXiu">新秀</string>
    <string name="jinbo">劲爆</string>
    <string name="gaoxiao">搞笑</string>
    <string name="mengmei">萌妹</string>
    <string name="tuijian">推荐</string>
    <string name="newViedo">热门视频</string>
    <string name="shoucang">我的收藏</string>
    <string name="zerozero">00</string>
    <string name="song">歌名</string>
    <string name="yanchang">演唱者的名字</string>
    <string name="one">1</string>
    <string name="first">第一名</string>
    <string name="second">第二名</string>
    <string name="third">第三名</string>
    <string name="three">3</string>
    <string name="loading">正在播放的列表</string>
    <string name="clearAll">全部清空</string>
    <string name="close">关闭</string>
    <string name="songType">歌曲分类</string>
    <string name="gequfenlei">歌曲分类</string>
    <string name="vip">会员专区</string>
    <string name="type">歌曲 , 歌手, 歌词, 朋友, 话题</string>
    <string name="ming">Mv名字</string>
    <string name="author">作者</string>
</resources>
