<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <include layout="@layout/headerview_beaner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/five"
        android:background="#e9e8e8"/>

    <RelativeLayout
        android:id="@+id/k_fragment_header_view_item_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
         >
        <ImageView
            android:id="@+id/ktv_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_mymusic_ktv_normal"
            android:layout_marginLeft="@dimen/ten"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/k"
            android:layout_toRightOf="@id/ktv_iv"
            android:layout_marginLeft="@dimen/five"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_next"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/five"
        android:background="#e9e8e8"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten">
        <LinearLayout
            android:id="@+id/img_k_ktv"
            android:layout_width="@dimen/oneHundredtwenty"
            android:layout_height="@dimen/oneHundredtwenty"
            android:orientation="vertical"
            android:gravity="center">
        <ImageView

            android:layout_width="@dimen/oneHundred"
            android:layout_height="@dimen/oneHundred"
            android:src="@mipmap/img_k_ktv"
            android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ktv"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
        android:id="@+id/img_k_chinese"
        android:layout_width="@dimen/oneHundredtwenty"
        android:layout_height="@dimen/oneHundredtwenty"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toRightOf="@id/img_k_ktv">
        <ImageView

            android:layout_width="@dimen/oneHundred"
            android:layout_height="@dimen/oneHundred"
            android:src="@mipmap/img_k_chinese"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/huayujinqu"
            android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/img_k_occident"
            android:layout_width="@dimen/oneHundredtwenty"
            android:layout_height="@dimen/oneHundredtwenty"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_toRightOf="@id/img_k_chinese">
        <ImageView

            android:layout_width="@dimen/oneHundred"
            android:layout_height="@dimen/oneHundred"
            android:src="@mipmap/img_k_occident"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oumeigeshou"
            android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/img_k_man"
            android:layout_width="@dimen/oneHundredtwenty"
            android:layout_height="@dimen/oneHundredtwenty"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/img_k_ktv">
            <ImageView

                android:layout_width="@dimen/oneHundred"
                android:layout_height="@dimen/oneHundred"
                android:src="@mipmap/img_k_man"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/men"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/img_k_woman"
            android:layout_width="@dimen/oneHundredtwenty"
            android:layout_height="@dimen/oneHundredtwenty"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_toRightOf="@id/img_k_man"
            android:layout_alignTop="@id/img_k_man">
            <ImageView

                android:layout_width="@dimen/oneHundred"
                android:layout_height="@dimen/oneHundred"
                android:src="@mipmap/img_k_woman"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/women"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/img_k_band"
            android:layout_width="@dimen/oneHundredtwenty"
            android:layout_height="@dimen/oneHundredtwenty"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_toRightOf="@id/img_k_woman"
            android:layout_alignTop="@id/img_k_woman">
            <ImageView

                android:layout_width="@dimen/oneHundred"
                android:layout_height="@dimen/oneHundred"
                android:src="@mipmap/img_k_band"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="@dimen/fifteen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three"
        android:background="#e9e8e8"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/forty"
       android:orientation="horizontal">
       <ImageView
           android:layout_width="@dimen/twenty"
           android:layout_height="@dimen/twenty"
           android:src="@mipmap/daqiang"
           android:layout_gravity="center"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/together"
           android:gravity="center_vertical"/>
   </LinearLayout>

</LinearLayout>