<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context="com.aqiang.dllo.mybaidumusic.fragment.grandSonFragment.SongMenuDetailFragment">

    <!--排行详情 歌曲列表-->
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/fragment_song_menu_detail_song_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/five"
                android:layout_weight="1"
                android:text="@string/gongyou"
                android:textSize="@dimen/sizeten"/>

            <ImageView
                android:id="@+id/fragment_song_menu_detail_download"
                android:layout_width="@dimen/twenty"
                android:layout_height="@dimen/twenty"

                android:src="@mipmap/ic_download_normal"/>

            <ImageView
                android:id="@+id/fragment_song_menu_detail_share"
                android:layout_width="@dimen/twenty"
                android:layout_height="@dimen/twenty"
                android:layout_marginLeft="@dimen/five"
                android:layout_marginRight="@dimen/five"
                android:src="@mipmap/ic_share_normal"
                />


        </LinearLayout>
        <TextView
            android:id="@+id/fragment_song_menu_detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_margin="@dimen/fifteen"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_song_menu_detail_rv"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fragment_song_menu_detail_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/twohundredtwentyfive"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/fragment_song_menu_detail_toolbar_layout"
            app:contentScrim="#05b1ef"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"
                android:id="@+id/song_menu_big_tu"/>
            <!--大图-->
            <ImageView
                android:id="@+id/fragment_song_menu_detail_pic_three"
                android:layout_width="@dimen/oneHundred"
                android:layout_height="@dimen/oneHundred"
                android:clickable="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher"
                />
                <TextView
                    android:id="@+id/fragment_song_menu_detail_tag_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biaoti"
                    android:layout_below="@id/fragment_song_menu_detail_pic_three"
                    android:gravity="center"/>
            
            <!--日期-->
            <TextView
                android:id="@+id/fragment_song_menu_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/five"
                android:layout_marginLeft="@dimen/five"
                android:clickable="true"
                android:text="@string/date"/>

            <ImageView
                android:id="@+id/fragment_song_menu_detail_star_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="@dimen/five"
                android:layout_marginRight="@dimen/five"
                android:src="@mipmap/abc_btn_rating_star_off_mtrl_alpha"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>
                <ImageView
                    android:id="@+id/fragment_song_menu_detail_star_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="@dimen/five"
                    android:layout_marginRight="@dimen/five"
                    android:src="@mipmap/abc_btn_rating_star_on_mtrl_alpha"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/fragment_song_menu_detail_toolbar"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                >

                <ImageView
                    android:id="@+id/fragment_song_menu_detail_back_iv"
                    android:layout_width="@dimen/fifteen"
                    android:layout_height="@dimen/fifteen"
                    android:layout_marginTop="@dimen/thirty"
                    android:src="@mipmap/bt_return_nor"/>
                <TextView
                    android:id="@+id/fragment_song_menu_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/twenty"
                    android:text="@string/content"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/marginTwenty_five"
                    android:maxLines="1"
                    android:ellipsize="marquee"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
